<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BuyUcoin</string>

    <!-- Strings related to login -->
    <bool name="isProduction">false</bool>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="rupees">₹</string>
    <string name="bottomsheet_profile">Profile</string>
    <string name="bottomsheet_referrals">Referrals</string>
    <string name="bottomsheet_settings">Settings</string>
    <string name="bottomsheet_chats">Chats</string>
    <string name="history_details">Details</string>
    <string name="wallet">Wallet</string>
    <string name="rates">Rates</string>
    <string name="buy_sell">Buy Sell</string>
    <string name="p2p">P2P</string>
    <string name="account">Account</string>
    <string name="no_deposits">No Deposits Orders</string>
    <string name="no_withdraw_orders">No Withdraw Orders</string>
    <string name="your_active_orders">Your Active Orders</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="deposit">Deposit</string>
    <string name="enter_transection_hash">Enter Transection hash</string>
    <string name="submit_tx_hash">submit tx hash</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="remove_request">Remove Request</string>
    <string name="_1234567890_xyz">1234567890@xyz</string>
    <string name="bank_details">BANK DETAILS</string>
    <string name="account_no">Account No</string>
    <string name="_12345678901234">12345678901234</string>
    <string name="bank_name">Bank Name</string>
    <string name="state_bank_of_india">State Bank of India</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="tomboya">Tomboya</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="barb0suldel">BARB0SULDEL</string>
    <string name="mode">Mode</string>
    <string name="imps">IMPS</string>
    <string name="note">Note</string>
    <string name="processing">Processing...</string>
    <string name="tx_hash">TX HASH</string>
    <string name="raise_dispute">Raise Dispute</string>
    <string name="see_bank_details">See bank details</string>
    <string name="time_left_in_minutes">Time left in minutes</string>
    <string name="hide_details">Hide Details</string>
    <string name="dispute">Dispute</string>
    <string name="complete">Complete</string>
    <string name="successful">Successful</string>
    <string name="wait_for_depositer_to_deposit_money_in_your_account">Wait for Depositer to deposit money in your account</string>
    <string name="mark_as_received">mark as received</string>
    <string name="dispute_raised">Dispute Raised</string>
    <string name="your_request_is_successfully_completed">Your request is successfully completed</string>
    <string name="active_withdrawals">Active Withdrawals</string>
    <string name="active_deposits">Active Deposits</string>
    <string name="digital_assets_exchange_wallet"><![CDATA[Digital Assets Exchange & Wallet]]></string>
    <string name="maintainance">This Wallet is Under Maintainance</string>
    <string name="market_history">MARKET HISTORY</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
</resources>
