<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/orderbook_card_drawable"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            style="@style/SuperSettingItem"
            android:id="@+id/supter_setting_history">

            <ImageView
                style="@style/SuperSettingItemIcon"
                android:src="@drawable/ic_history"
                />

            <TextView
                style="@style/SuperSettingItemText"
                android:text="@string/history"
                />


        </RelativeLayout>
        <RelativeLayout
            style="@style/SuperSettingItem"
            android:id="@+id/supter_setting_about">

            <ImageView
                style="@style/SuperSettingItemIcon"
                android:src="@drawable/ic_info_black_24dp"
                />

            <TextView
                style="@style/SuperSettingItemText"
                android:text="@string/about"
                />


        </RelativeLayout>
        <RelativeLayout
            style="@style/SuperSettingItem"
            android:id="@+id/supter_setting_policy">

            <ImageView
                style="@style/SuperSettingItemIcon"
                android:src="@drawable/ic_verified_user_black_24dp"
                />

            <TextView
                style="@style/SuperSettingItemText"
                android:text="@string/privacy_policy"
                />


        </RelativeLayout>
        <RelativeLayout
            style="@style/SuperSettingItem"
            android:id="@+id/super_setting_logout"
            >

            <ImageView
                style="@style/SuperSettingItemIcon"
                android:src="@drawable/ic_portrait_black_24dp" />

            <TextView
                style="@style/SuperSettingItemText"
                android:text="Logout"
                />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>