<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/orderbook_card_drawable"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/history_item_drawable"
        android:elevation="2dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:id="@+id/view_layout_display"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/wait_for_depositer_to_deposit_money_in_your_account"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/history_item_drawable"
        android:elevation="2dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:id="@+id/tx_hash_layout_display"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/tx_hash"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/tx_hash"
            android:id="@+id/tx_hash_tv"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/mark_complete"
                android:background="@drawable/pills"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:text="@string/mark_as_received"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/raise_dispute"
                android:background="@drawable/pills_red"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/dispute"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/history_item_drawable"
        android:elevation="2dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:id="@+id/dispute_layout_display"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/tx_hash"
            android:id="@+id/dispute_tx_hash_tv"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/dispute_raised"
            android:textSize="25sp"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/mark_received"
                android:background="@drawable/pills"
                android:textColor="@color/colorWhite"
                android:padding="10dp"
                android:text="@string/mark_as_received"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/history_item_drawable"
        android:elevation="2dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:id="@+id/success_layout_display"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="Transaction Successful"
            android:textSize="25sp"
            android:textColor="@color/kyc_color"
            android:gravity="center"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="50dp">
    </LinearLayout>















    </LinearLayout>
